--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,16 @@
     padding: 0;
 }
 
+@font-face {
+    font-family: "jinky";
+    src: url("/fonts/JINKY.ttf");
+}
+
+@font-face {
+    font-family: "からかぜ";
+    src: url("/fonts/karakaze-M.ttf");
+}
+
 body{
     width: 100%;
     font-family: "jinky", "からかぜ";
