--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,7 @@ li a :active{
 .top-title h1{
     font-size: 100px;
     letter-spacing: 2px;
+    margin-bottom: -20px;
 }
 
 @media all and (max-width: 500px){
