--- a/css/about.css
+++ b/css/about.css
@@ -37,7 +37,7 @@
  
 #loading_bar {
     width: 0;
-    height: 3px;
+    height: 2px;
     margin-top: 16px;
     background: #F2CB04;
     transition-duration: 1s;
@@ -205,7 +205,7 @@ header{
 .account p{
     /* background-color: #fff; */
     font-size: 20px;
-    font-weight: 700;
+    /* font-weight: 700; */
 }
 
 /* footer */
