--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@
  
 #loading_bar {
     width: 0;
-    height: 3px;
+    height: 2px;
     margin-top: 16px;
     background: #F2CB04;
     transition-duration: 1s;
@@ -95,7 +95,7 @@ body{
 
 li{
     display: inline-block;
-    font-size: 48px;
+    font-size: 3rem;
     letter-spacing: 6px;
     padding: 0px 20px 0px 30px;
     margin: 16px 10px 0px;
@@ -111,17 +111,24 @@ li a :active{
 }
 
 .top-title{
+    /* width: 90%; */
     text-align: center;
+    /* position: absolute;
+    top: 400px;
+    left: 50%;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%); */
 }
 
 .top-title p{
-    font-size: 32px;
+    font-size: 3rem;
     letter-spacing: 6px;
     margin-bottom: -8px;
 }
 
 .top-title h1{
-    font-size: 100px;
+    font-size: 6rem;
     letter-spacing: 2px;
     margin-bottom: -20px;
 }
